--- a/package.json
+++ b/package.json
@@ -39,18 +39,18 @@
     "build": "tsc -p ."
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.0",
-    "@types/node": "^12.7.2",
-    "@types/react": "^16.9.1",
-    "leaflet": "^1.7.1",
-    "react": "^16.8.6",
-    "react-leaflet": "^3.1.0",
-    "typescript": "^3.9.9"
+    "@types/leaflet": "^1.7.11",
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.16",
+    "leaflet": "^1.8.0",
+    "react": "^18.2.0",
+    "react-leaflet": "^4.0.1",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
     "leaflet": ">=1.7",
-    "react-leaflet": "3.x"
+    "react-leaflet": "3.x || 4.x"
   },
   "dependencies": {
     "leaflet-drift-marker": "^2.0.0"
