Add postinstall script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "homepage": "https://github.com/hugobarragon/react-leaflet-drift-marker#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.11",
@@ -48,8 +49,8 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
     "leaflet": ">=1.7",
+    "react": ">=16.8.0",
     "react-leaflet": "3.x || 4.x"
   },
   "dependencies": {
